--- a/halyk_club.html
+++ b/halyk_club.html
@@ -8,63 +8,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="script_33.js" defer></script>
     <link rel="stylesheet" href="halyk_club.css">
-    <style>
-        .dropbtn {
-            color: black;
-            padding: 13px;
-            font-size: 13px;
-            cursor: pointer;
-        }
-
-        .dropdown {
-            position: relative;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            overflow: auto;
-            box-shadow: 0px 8px 16px 0px rgba(117, 117, 117, 0.534);
-        }
-
-        .dropdown-content a {
-            color: black;
-            padding: 3px 5px;
-            text-decoration: none;
-            display: block;
-        }
-
-        .dropdown a:hover {
-            background-color: #ddd;
-        }
-
-        .show {
-            display: block;
-        }
-    </style>
-</head>
+    <script src="halyk_club.js" defer></script>
+ </head>
 
 <body>
     <div class="Main">
         <div class="Conteiner">
             <div style="display:flex; height: 95px;">
                 <div class="Logo">
-                    <img src="image/logo_halyk.svg" alt="Logo_Halyk_Bank" width="165px" height="58px">
+                    <a href="https://halykbank.kz/"><img src="image/logo_halyk.svg" alt="Logo_Halyk_Bank" width="165px" height="58px"></a>
                 </div>
                 <div class="list">
                     <div style="width: 100%;">
                         <ul class="Ul_first">
                             <li>
-                                <a class = "Ab" style="width: 130px;" href="Defalt">Частным клиентам</a>
+                                <a class = "Ab" style="width: 130px;" href="https://halykbank.kz/">Частным клиентам</a>
                             </li>
                             <li>
-                                <a class = "Ab" style="width: 65px;" href="Defalt">Бизнесу</a>
+                                <a class = "Ab" style="width: 65px;" href="https://halykbank.kz/business">Бизнесу</a>
                             </li>
                             <li>
                                 <a class = "Ab" href="halyk_club.html">Halyk Club</a>
                             </li>
                             <li>
-                                <a class = "Ab" href="Defalt">Halyk Info</a>
+                                <a class = "Ab" href="https://halykbank.kz/knowledge_base">Halyk Info</a>
                             </li>
                             <li>
                                 <a class = "Ab" href="Defalt">О банке</a>
@@ -79,20 +46,22 @@
                                     слабовидящих</a>
                             </li>
                             <li>
-                                <a href="Defalt" style="position: relative; bottom: 5px; width: 120px;"> <img src="image/geo.png"
+                                <a href="https://halykbank.kz/map/atm" style="position: relative; bottom: 5px; width: 120px;"> <img src="image/geo.png"
                                         width="18px" height="20px" style="position: relative; top: 5px;"> Банк на
                                     карте </a>
                             </li>
                             <li>
-                                <a href="Defalt" style="position: relative; bottom: 5px; width: 40px;"> <img src="image/call.png"
+                                <a href="https://halykbank.kz/halykclub/page/tel:7111" style="position: relative; bottom: 5px; width: 40px;"> <img src="image/call.png"
                                         width="18px" height="20px" style="position: relative; top: 5px;"> 7111</a>
                             </li>
+                            
                             <li>
                                 <div class="dropdown">
-                                    <button onclick="myFunction()" class="dropbtn">Рус</button>
-                                    <div id="myDropdown" class="dropdown-content">
-                                        <a href="#">ҚАЗ</a>
-                                        <a href="#">ENG</a>
+                                    <img src=""<button class="dropbtn">Рус</button>
+                                    <div class="dropdown-content">
+                                        <a href="Defalt">Рус</a>
+                                        <a href="Defalt">Қаз</a>
+                                        <a href="Defalt">Eng</a>
                                     </div>
                                 </div>
                             </li>
@@ -283,21 +252,46 @@
             </div>
         </div>
         <script>
-            function myFunction() {
-                document.getElementById("myDropdown").classList.toggle("show");
-            }
-            window.onclick = function (event) {
-                if (!event.target.matches('.dropbtn')) {
-                    var dropdowns = document.getElementsByClassName("dropdown-content");
-                    var i;
-                    for (i = 0; i < dropdowns.length; i++) {
-                        var openDropdown = dropdowns[i];
-                        if (openDropdown.classList.contains('show')) {
-                            openDropdown.classList.remove('show');
-                        }
-                    }
-                }
-            }
+            /*
+            выподающее меню сначало стоит рус и рядом стрелка вниз если нажать на стрелку то меню раскрывается и стрелка вверх если нажать на рус то меню закрывается и стрелка вниз
+            и есть область где border серый 2px и сначало нет border если нажать на рус то border появляется
+            */
+            let menu = document.querySelector('.menu');
+
+            let menuOpen = document.querySelector('.menu-open');
+            let menuClose = document.querySelector('.menu-close');
+
+
+            menuOpen.addEventListener('click', function () {
+                menu.style.display = 'block';
+                menuOpen.style.display = 'none';
+                menuClose.style.display = 'block';
+            });
+
+            menuClose.addEventListener('click', function () {
+                menu.style.display = 'none';
+                menuOpen.style.display = 'block';
+                menuClose.style.display = 'none';
+            });
+
+            let menuOpen2 = document.querySelector('.menu-open2');
+            let menuClose2 = document.querySelector('.menu-close2');
+            let menu2 = document.querySelector('.menu2');
+
+            menuOpen2.addEventListener('click', function () {
+                menu2.style.display = 'block';
+                menuOpen2.style.display = 'none';
+                menuClose2.style.display = 'block';
+            });
+
+            menuClose2.addEventListener('click', function () {
+                menu2.style.display = 'none';
+                menuOpen2.style.display = 'block';
+                menuClose2.style.display = 'none';
+            });
+
+
+
         </script>
 </body>
 
