--- a/halyk_club.html
+++ b/halyk_club.html
@@ -57,7 +57,7 @@
                             
                             <li>
                                 <div class="dropdown">
-                                    <img src=""<button class="dropbtn">Рус</button>
+                                    <img src="image/"<button class="dropbtn">Рус</button>
                                     <div class="dropdown-content">
                                         <a href="Defalt">Рус</a>
                                         <a href="Defalt">Қаз</a>
